restrict-wildcard-resources/.chainsaw-test/crb-good.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRoleBinding
metadata:
  name: goodcrb01
subjects:
- kind: ServiceAccount
  name: foo1
  namespace: test2
roleRef:
  kind: ClusterRole
  name: goodcr01
  apiGroup: rbac.authorization.k8s.io
---
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRoleBinding
metadata:
  name: goodcrb02
subjects:
- kind: ServiceAccount
  name: foo2
  namespace: test2
roleRef:
  kind: ClusterRole
  name: goodcr02
  apiGroup: rbac.authorization.k8s.io
---
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRoleBinding
metadata:
  name: goodcrb03
subjects:
- kind: ServiceAccount
  name: foo3
  namespace: test2
roleRef:
  kind: ClusterRole
  name: goodcr03
  apiGroup: rbac.authorization.k8s.io
---
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRoleBinding
metadata:
  name: goodcrb04
subjects:
- kind: ServiceAccount
  name: foo3
  namespace: test2
roleRef:
  kind: ClusterRole
  name: goodcr04
  apiGroup: rbac.authorization.k8s.io
---
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRoleBinding
metadata:
  name: goodcrb05 
subjects:
- kind: ServiceAccount
  name: foo3
  namespace: test2
roleRef:
  kind: ClusterRole
  name: goodcr05
  apiGroup: rbac.authorization.k8s.io
