restrict-wildcard-resources/.chainsaw-test/rb-bad.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: RoleBinding
metadata:
  name: badrb01
subjects:
- kind: ServiceAccount
  name: bar1
  namespace: bar
roleRef:
  kind: Role
  name: badcr01
  apiGroup: rbac.authorization.k8s.io
---
apiVersion: rbac.authorization.k8s.io/v1
kind: RoleBinding
metadata:
  name: badrb02
subjects:
- kind: ServiceAccount
  name: bar2
  namespace: bar
roleRef:
  kind: Role
  name: badcr02
  apiGroup: rbac.authorization.k8s.io
---
apiVersion: rbac.authorization.k8s.io/v1
kind: RoleBinding
metadata:
  name: badrb03
subjects:
- kind: ServiceAccount
  name: bar3
  namespace: bar
roleRef:
  kind: Role
  name: badcr03
  apiGroup: rbac.authorization.k8s.io
